<resources>
    <string name="app_name">EMWI_New</string>

    <!-- Registration values -->
    <string name="reg_hint_full_name">Full Name*</string>
    <string name="reg_hint_mobile">Mobile Number*</string>
    <string name="reg_hint_email">Email*</string>
    <string name="reg_hint_dob">Date of Birth</string>
    <string name="reg_hint_nominee">Nominee Name*</string>
    <string name="reg_hint_country">Country</string>
    <string name="reg_hint_state">State</string>
    <string name="reg_hint_city">City</string>
    <string name="reg_hint_address">Address</string>
    <string name="reg_hint_pincode">Pin Code</string>
    <string name="reg_hint_sponspor_id">Sponsor Id*</string>
    <string name="reg_hint_spons_id">Sponsor Id</string>
    <string name="reg_hint_company_id">Company Id</string>
    <string name="reg_hint_area_dist">Area Distributor</string>
    <string name="reg_hint_sponsor_name">Sponsor Name*</string>
    <string name="reg_hint_password">Password*</string>
    <string name="reg_hint_conf_password">Confirm Password*</string>
    <string name="reg_hint_position">Position</string>
    <string name="reg_hint_pancard_no">PAN Card No.*</string>
    <string name="reg_hint_pancard_attach">PAN Card Attachment*</string>
    <string name="reg_hint_aadhar_card_no">Aadhar Card No.*</string>
    <string name="reg_hint_aadhar_attach">Aadhar Card Attachment*</string>
    <string name="reg_hint_note">Note: Image size is limited to not greater than 1MB.</string>
    <string name="reg_hint_terms_cond">I Accept Terms &amp; Conditions</string>
    <string name="reg_hint_login">Already have an account?</string>
    <string name="reg_hint_date">dd-mm-yyyy</string>
    <string name="reg_hint_otp">Enter OTP</string>
    <string name="login">Login</string>
    <string name="btn_send_otp">SEND OTP</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="title_register">CREATE ACCOUNT</string>
    <string name="short_title_register">Sponsor Information</string>

    <!-- Reset Password values -->
    <string name="title_reset_password">RESET PASSWORD</string>
    <!--<string name="user_id">UserId</string>-->
    <string name="user_note">Enter Your User Id below and we will send you \n reset instructions on mobile</string>

    <!-- Dashboard values -->
    <string name="tv_ttl_left_be">TOTAL LEFT BV</string>
    <string name="tv_ttl_right_be">TOTAL RIGHT BV</string>
    <string name="tv_ttl_repurchase">SELF REPURCHASE BV</string>
    <string name="tv_ttl_weekly_income">Weekly First \n Purchase Income</string>
    <string name="tv_ttl_royality_income">Royality Income</string>
    <string name="tv_ttl_matching_income">Weekly Matching Income</string>
    <string name="tv_ttl_rep_matching_income">Rep. Matching Income</string>
    <string name="tv_ttl_withdraw">TOTAL WITHDRAW</string>
    <string name="tv_ttl_income">TOTAL INCOME</string>
    <string name="tv_ttl_left_bv_rep">Left BV Rep.</string>
    <string name="tv_ttl_right_bv_rep">Right BV Rep.</string>
    <string name="tv_ttl_week_left_bv">Week Left BV</string>
    <string name="tv_ttl_week_right_bv">Week Right BV</string>

    <!-- Registration User Errors-->
    <string name="err_full_name">The fullname field is required.</string>
    <string name="err_nominee_name">The parentname field is required.</string>
    <string name="err_password">The password field is required.</string>
    <string name="err_password_length">The password field must be at least 6 characters.</string>
    <string name="err_pan_photo">The pan photo field is required.</string>
    <string name="err_pan_no">The pan no field is required.</string>
    <string name="err_valid_pan_no">The pancard no field format is invalid.</string>
    <string name="err_conf_password">The Confirm Password field is required.</string>
    <string name="err_mobile">The mobile field is required.</string>
    <string name="err_email">The email field is required.</string>
    <string name="err_valid_email">The email field must be a valid email.</string>
    <string name="err_sponsor_id">The Sponsor ID field is required.</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="bonzanaTimer">Bonaza Timer</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="menu_home">Home</string>

    <!--Mayuri-->

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_info">Info</string>
    <string name="tv_uploadKYC">Upload KYC</string>
    <string name="tv_bank_details">Bank Details</string>
    <string name="tv_security">Security</string>
    <string name="tv_contact_info">Contact Information</string>
    <string name="tv_my_dreams">My Dreams</string>
    <string name="profile">Profile</string>
    <string name="info">INFO</string>
    <string name="user_id">User Id *</string>
    <string name="sponsor_id">Sponsor Id *</string>
    <string name="name">Name *</string>
    <string name="mobile_no">Mobile No. *</string>
    <string name="email">Email *</string>
    <string name="date_of_birth">Date of Birth *</string>
    <string name="date_of_joining">Date of Joining *</string>
    <string name="blood_group">Blood Group *</string>
    <string name="nominee_name">Nominee Name *</string>
    <string name="nominee_relation">Nominee Relation *</string>
    <string name="bank_account_number">Bank Account Number *</string>
    <string name="a_c_holder_name">A/C Holder Name*</string>
    <string name="bank_name">Bank Name*</string>
    <string name="bank_branch_name">Bank Branch Name*</string>
    <string name="pan_card_number">PAN Card Number*</string>
    <string name="bank_ifsc_code">Bank IFSC Code*</string>
    <string name="enter_your_old_password">Enter your old password</string>
    <string name="old_password">Old Password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="new_password">New Password</string>
    <string name="re_type_new_password">Re-type New Password</string>
    <string name="upload_personal_photo">Upload Personal Photo</string>
    <string name="note_image_size_is_limited_to_not_greater_than_1mb">Note image size is limited to not greater than 1MB</string>
    <string name="choose_file">Choose File</string>
    <string name="upload_pan_card">Upload Pan Card</string>
    <string name="upload_aadhar_card">Upload Aadhar Card</string>
    <string name="upload_address_proof">Upload Address Proof</string>
    <string name="gst_number">GST Number</string>
</resources>