<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/small_padding"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/small_padding"
        android:layout_margin="@dimen/small_padding"
        android:background="@drawable/old_password">

        <EditText
            android:id="@+id/et_old_password"
            style="@style/et_security_style"
            android:hint="@string/enter_your_old_password"
            android:inputType="textPassword"/>
        <TextView
            android:text="@string/old_password"
            style="@style/tv_security_style" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/small_padding"
        android:layout_margin="@dimen/small_padding"
        android:background="@drawable/new_password">

        <EditText
            android:id="@+id/et_new_password"
            style="@style/et_security_style"
            android:hint="@string/enter_your_new_password"
            android:inputType="textPassword" />
        <TextView
            android:text="@string/new_password"
            style="@style/tv_security_style" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/small_padding"
        android:layout_margin="@dimen/small_padding"
        android:background="@drawable/old_password">

        <EditText
            android:id="@+id/et_retype_password"
            style="@style/et_security_style"
            android:hint="@string/re_type_new_password"
            android:inputType="textPassword" />
        <TextView
            android:text="Re-type New Password"
            style="@style/tv_security_style" />

    </LinearLayout>


</LinearLayout>